# TJH

./: PRODUCTION_READINESS_SUMMARY.md
.cursor/plans/: prom-30a035ca.plan.md
.github/workflows/: ci.yml
backend/: DEPLOYMENT.md  README.md  env.example  job_cache.db  main.py  pyproject.toml  requirements.txt  settings.py  test_accuracy.py  test_job_scanner.py  test_theirstack_accuracy.py
backend/db/: database.py  job_cache.sql
backend/middleware/: __init__.py  auth.py  rate_limit.py  request_id.py
backend/models/: schemas.py
backend/services/: cache_service.py
backend/tests/: test_accuracy.py
backend/utils/: error_handler.py  indeed_service.py  job_scanner.py  job_searcher.py  keyword_extractor.py  linkedin_jobspy_service.py  pdf_utils.py  theirstack_service.py
frontend/: README.md  env.local.example
frontend/app/: globals.css  layout.tsx  manifest.json  page.tsx
frontend/app/api/indeed/: route.ts
frontend/app/api/jsearch/: route.ts
frontend/app/api/linkedin/: route.ts
frontend/app/api/theirstack/: route.ts
