[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=2.3.0",
    "fastapi>=0.122.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pyflakes>=3.4.0",
]
